--- a/.github/workflows/build_and_release.yaml
+++ b/.github/workflows/build_and_release.yaml
@@ -1,11 +1,7 @@
 name: Build and release Aseprite
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'BuildLog.md'
+  push
 env:
   BUILD_TYPE: Release
 
